--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     </div>
     <div class="status-bar">
       <p class="status-bar-field">Press F1 for help</p>
-      <p class="status-bar-field">CPU Usage: 14%</p>
-      <p class="status-bar-field">Live</p>
+      <p class="status-bar-field" id="statusCpu">CPU Usage: 14%</p>
+      <p class="status-bar-field"><span id="statusLiveDot">●</span> Live</p>
     </div>
   </div>
 </div>
