--- a/index.html
+++ b/index.html
@@ -5,26 +5,56 @@
 <title>Yimana RP Elections</title>
 <link rel="stylesheet" href="https://unpkg.com/xp.css"/>
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
-<style>#map{height:calc(100vh - 90px)}.controls{display:flex;gap:12px;align-items:center;padding:8px 12px;border-bottom:1px solid #eee;background:#fff}
+<style>.controls{display:flex;gap:12px;align-items:center;padding:8px 12px;border-bottom:1px solid #eee;background:#fff}
   /* Sticky header */
   #appHeader { position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 0 rgba(0,0,0,.08); }
   .status-pill { display:inline-flex; align-items:center; gap:6px; padding:2px 8px; border:1px solid #888; background:#f8f8f8; }
   #hdrLiveDot { color:#1a7f1a; }
-
-
-/* Doc viewer portrait + content layout */
-.tno-body { display:block; overflow:hidden; }
-.tno-portrait { float:left; margin:0 12px 8px 0; max-width:150px; }
-.tno-portrait img { display:block; max-width:100%; height:auto; border:1px solid #aaa; }
-/* .tno-content removed: empty ruleset */
-
-
 </style>
 
 <style>
-  #wrap { display: flex; gap: 8px; margin: 8px; }         /* add margin so it’s not flush-left */
-  #panelMap { display: flex; gap: 8px; flex: 1 1 100%; }   /* let the map+desk span the width */
-  #map { flex: 1 1 auto; min-height: 80vh; }               /* keep your height rule too */
+/* Layout: desk + map share the same row height */
+#wrap {
+  display: flex;
+  gap: 8px;
+  margin: 8px;
+  align-items: stretch;                    /* children equal height */
+}
+
+/* Fix the row height to the viewport (account for header + margins) */
+#panelMap {
+  display: flex;
+  gap: 8px;
+  flex: 1 1 100%;
+  min-height: calc(100vh - 120px);         /* tweak 120px if your header is taller/shorter */
+}
+
+/* Let the map fill the remaining width */
+#map {
+  flex: 1 1 0;
+  min-height: 0;                           /* allow flex to control height */
+}
+
+/* Desk column is a fixed-but-responsive width and full height */
+#desk {
+  display: flex;
+  flex-direction: column;
+  flex: 0 0 clamp(320px, 28vw, 420px);
+  max-width: clamp(320px, 28vw, 420px);
+  min-height: 0;                           /* enables inner flex scrolling */
+}
+
+/* Body stretches; doc pane scrolls inside it */
+#desk .window-body {
+  flex: 1 1 auto;
+  overflow: hidden;
+}
+
+/* Footer is pinned at the bottom (aligns baseline to map) */
+#desk .status-bar {
+  flex: 0 0 auto;
+}
+
   
   .race-row { display:flex; align-items:center; gap:8px; margin:6px 0; }
   .race-name { width:110px; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
@@ -34,6 +64,101 @@
   .swatch { display:inline-block; width:10px; height:10px; margin-right:6px; vertical-align:middle; border:1px solid #333; }
   .muted { color:#555; font-size:12px; }
   #panelMap { display: flex; gap: 8px; }
+</style>
+<style>
+/* ===== Docs Viewer (consolidated) ===== */
+/* Container section inside the desk (no fieldset chrome) */
+#docsSection { padding-top: 0;}
+#docsSection > legend { display: none; }
+
+/* The scrollable pane */
+#docPane.tno-viewer {
+  height: 340px;
+  overflow: auto;
+  padding: 0;
+  background: transparent;
+  /* mild separators + joined edges */
+  border-left: 1px solid #bbb;
+  border-right: 1px solid #bbb;
+  border-bottom: 1px solid #bbb;
+  border-top: 1px solid #e0e0e0;     /* soft top hairline */
+  /* optional: faint inner lines for “document” feel */
+  box-shadow: inset 0 1px 0 #f5f5f5, inset 0 -1px 0 #f5f5f5;
+}
+
+
+/* TNO card look (matches markup your JS emits) */
+.tno-card {
+  border: 1px solid #1a1410;       /* dark-brown edge */
+  background: #f6f3ee;             /* warm paper */
+  margin: 8px 0;
+  box-shadow: inset 0 0 0 1px #fff;
+}
+.tno-banner {
+  display: flex;
+  flex-direction: column;           /* name on top, tag below */
+  align-items: flex-start;
+  gap: 2px;
+  padding: 8px 10px;
+  color: #f4e8d7;
+  background: linear-gradient(#2b211c, #1f1814);
+  border-bottom: 1px solid #120e0b;
+}
+.tno-name { font-weight: 800; letter-spacing: .2px; }
+.tno-tag  { font-size: 12px; color: #cdbba7; }
+
+/* Body + portrait layout */
+.tno-body { display: block; overflow: hidden; padding: 10px; }
+.tno-portrait { float: left; margin: 0 12px 8px 0; max-width: 150px; }
+.tno-portrait img { display: block; max-width: 100%; height: auto; border: 1px solid #6b5a49; }
+.tno-content { display: block; overflow: hidden; }
+
+/* Defensive inside the viewer */
+#docPane p, #docPane li { overflow-wrap: anywhere; }
+#docPane img { display: block; max-width: 100%; height: auto; }
+
+/* Desk/map sizing (stable desk width; map flexes) */
+#desk { flex: 0 0 clamp(320px, 28vw, 420px); max-width: clamp(320px, 28vw, 420px); }
+#desk .window-body { overflow: hidden; }
+#map  { flex: 1 1 0; }
+</style>
+<style>
+/* TNO banner typography + subtle parchment texture */
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Roboto+Condensed:wght@400;700&display=swap');
+
+.tno-banner .tno-name {
+  font-family: 'Oswald', 'Roboto Condensed', sans-serif;
+  font-size: 15px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: .5px;
+}
+.tno-banner .tno-tag {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  color: #cdbba7;
+}
+
+/* Parchment look for the card body (keeps your warm base color) */
+.tno-card {
+  background:
+    linear-gradient(#f6f3ee, #f6f3ee),                    /* base */
+    repeating-linear-gradient(0deg, rgba(0,0,0,.035) 0, rgba(0,0,0,.035) 1px, transparent 1px, transparent 3px); /* paper grain */
+  background-blend-mode: multiply;
+}
+
+/* Slightly darker border for the portrait */
+.tno-portrait img { border: 1px solid #6b5a49; }
+
+/* Controls bar that visually attaches to the card */
+#docsControls { margin: 0; padding: 6px 8px; background:#f2f2f2; border:1px solid #bbb; border-bottom:0; border-radius:2px 2px 0 0; }
+
+
+/* Make the first card attach cleanly to the controls strip */
+#docPane.tno-viewer { border: 1px solid #bbb; border-top: 0; }
+#docPane .tno-card:first-child { margin-top: 0;}
+
 </style>
 
 </head>
@@ -128,7 +253,7 @@
         <fieldset class="field-row-stacked" id="docsSection" style="margin-top:10px;">
           <legend>Docs Viewer</legend>
 
-          <div class="field-row" style="align-items:center; gap:8px; margin-bottom:6px;">
+          <div id="docsControls" class="field-row" style="align-items:center; gap:8px; margin-bottom:6px;">
             <label for="docSelect" class="muted" style="min-width:80px;">Document:</label>
             <select id="docSelect" style="flex:1; min-width:180px;">
               <!-- Update these to your real docs -->
@@ -137,18 +262,9 @@
             </select>
           </div>
 
-  <div id="docPane" class="doc-pane"></div>
+  <div id="docPane" class="tno-viewer"></div>
         </fieldset>
       </div>
-      <style>/* Docs viewer inside desk */
-        #docsSection .doc-pane {
-  max-height: 40vh;
-  overflow: auto;
-  padding: 8px;
-  border: 1px solid #aaa;
-  background: #fff;
-        }
-      </style>
       <div class="status-bar">
         <p class="status-bar-field">Press F1 for help</p>
         <p class="status-bar-field" id="statusCpu">CPU Usage: 14%</p>
@@ -160,8 +276,6 @@
   <div id="panelResults" style="display:none;"></div>
   <div id="panelAbout" style="display:none;"></div>
 </div>
-
-
 
 <!-- Media Player Dock (draggable, YouTube/Spotify integrations) -->
 <div id="mediaDock" class="window" style="position:fixed; left:40px; top:120px; z-index:1200; min-width:320px; display:none;">
@@ -214,6 +328,20 @@
   btnRes.addEventListener('click', ()=>select('results'));
   btnAbt.addEventListener('click', ()=>select('about'));
   select('map');
+})();
+</script>
+<script>
+(function exactRowHeight(){
+  const head = document.getElementById('appHeader');
+  const panel = document.getElementById('panelMap');
+  if (!head || !panel) return;
+  function apply(){
+    // header height + top/bottom margins around the app (8px + 8px)
+    const h = head.getBoundingClientRect().height + 16;
+    panel.style.height = `calc(100vh - ${Math.round(h)}px)`;
+  }
+  window.addEventListener('resize', apply);
+  apply();
 })();
 </script>
 </body></html>
