--- a/index.html
+++ b/index.html
@@ -72,19 +72,17 @@
 #docsSection > legend { display: none; }
 
 /* The scrollable pane */
-#docPane.tno-viewer {
-  height: 340px;
-  overflow: auto;
-  padding: 0;
-  background: transparent;
-  /* mild separators + joined edges */
-  border-left: 1px solid #bbb;
-  border-right: 1px solid #bbb;
-  border-bottom: 1px solid #bbb;
-  border-top: 1px solid #e0e0e0;     /* soft top hairline */
-  /* optional: faint inner lines for “document” feel */
-  box-shadow: inset 0 1px 0 #f5f5f5, inset 0 -1px 0 #f5f5f5;
+#docPane.tno-viewer{
+  height:340px;
+  overflow:auto;
+  padding:0 0 10px 0;      /* bottom padding so you can scroll past the last line */
+  background:transparent;
+  border:1px solid #bbb;   /* share borders with the controls strip */
+  border-top:0;            /* attaches to #docsControls */
+  box-shadow:none;         /* remove the inner “white hairline” illusion */
+  box-sizing:border-box;   /* include borders in the 340px height */
 }
+
 
 
 /* TNO card look (matches markup your JS emits) */
@@ -109,9 +107,16 @@
 
 /* Body + portrait layout */
 .tno-body { display: block; overflow: hidden; padding: 10px; }
+.tno-body::after {
+  content: "";
+  display: table;
+  clear: both;
+}
 .tno-portrait { float: left; margin: 0 12px 8px 0; max-width: 150px; }
+/* Let text wrap around the portrait but reclaim full width afterward */
+
 .tno-portrait img { display: block; max-width: 100%; height: auto; border: 1px solid #6b5a49; }
-.tno-content { display: block; overflow: hidden; }
+.tno-content { display: block; overflow: visible; }
 
 /* Defensive inside the viewer */
 #docPane p, #docPane li { overflow-wrap: anywhere; }
@@ -156,7 +161,6 @@
 
 
 /* Make the first card attach cleanly to the controls strip */
-#docPane.tno-viewer { border: 1px solid #bbb; border-top: 0; }
 #docPane .tno-card:first-child { margin-top: 0;}
 
 </style>
@@ -253,7 +257,7 @@
         <fieldset class="field-row-stacked" id="docsSection" style="margin-top:10px;">
           <legend>Docs Viewer</legend>
 
-          <div id="docsControls" class="field-row" style="align-items:center; gap:8px; margin-bottom:6px;">
+          <div id="docsControls" class="field-row" style="align-items:center; gap:8px;">
             <label for="docSelect" class="muted" style="min-width:80px;">Document:</label>
             <select id="docSelect" style="flex:1; min-width:180px;">
               <!-- Update these to your real docs -->
