--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Yimana RP Elections</title>
 <link rel="stylesheet" href="https://unpkg.com/xp.css"/>
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+<link rel="stylesheet" href="css/docs_viewer.css">
 <style>.controls{display:flex;gap:12px;align-items:center;padding:8px 12px;border-bottom:1px solid #eee;background:#fff}
   /* Sticky header */
   #appHeader { position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 0 rgba(0,0,0,.08); }
@@ -64,105 +65,6 @@
   .swatch { display:inline-block; width:10px; height:10px; margin-right:6px; vertical-align:middle; border:1px solid #333; }
   .muted { color:#555; font-size:12px; }
   #panelMap { display: flex; gap: 8px; }
-</style>
-<style>
-/* ===== Docs Viewer (consolidated) ===== */
-/* Container section inside the desk (no fieldset chrome) */
-#docsSection { padding-top: 0;}
-#docsSection > legend { display: none; }
-
-/* The scrollable pane */
-#docPane.tno-viewer{
-  height:340px;
-  overflow:auto;
-  padding:0 0 10px 0;      /* bottom padding so you can scroll past the last line */
-  background:transparent;
-  border:1px solid #bbb;   /* share borders with the controls strip */
-  border-top:0;            /* attaches to #docsControls */
-  box-shadow:none;         /* remove the inner “white hairline” illusion */
-  box-sizing:border-box;   /* include borders in the 340px height */
-}
-
-
-
-/* TNO card look (matches markup your JS emits) */
-.tno-card {
-  border: 1px solid #1a1410;       /* dark-brown edge */
-  background: #f6f3ee;             /* warm paper */
-  margin: 8px 0;
-  box-shadow: inset 0 0 0 1px #fff;
-}
-.tno-banner {
-  display: flex;
-  flex-direction: column;           /* name on top, tag below */
-  align-items: flex-start;
-  gap: 2px;
-  padding: 8px 10px;
-  color: #f4e8d7;
-  background: linear-gradient(#2b211c, #1f1814);
-  border-bottom: 1px solid #120e0b;
-}
-.tno-name { font-weight: 800; letter-spacing: .2px; }
-.tno-tag  { font-size: 12px; color: #cdbba7; }
-
-/* Body + portrait layout */
-.tno-body { display: block; overflow: hidden; padding: 10px; }
-.tno-body::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-.tno-portrait { float: left; margin: 0 12px 8px 0; max-width: 150px; }
-/* Let text wrap around the portrait but reclaim full width afterward */
-
-.tno-portrait img { display: block; max-width: 100%; height: auto; border: 1px solid #6b5a49; }
-.tno-content { display: block; overflow: visible; }
-
-/* Defensive inside the viewer */
-#docPane p, #docPane li { overflow-wrap: anywhere; }
-#docPane img { display: block; max-width: 100%; height: auto; }
-
-/* Desk/map sizing (stable desk width; map flexes) */
-#desk { flex: 0 0 clamp(320px, 28vw, 420px); max-width: clamp(320px, 28vw, 420px); }
-#desk .window-body { overflow: hidden; }
-#map  { flex: 1 1 0; }
-</style>
-<style>
-/* TNO banner typography + subtle parchment texture */
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Roboto+Condensed:wght@400;700&display=swap');
-
-.tno-banner .tno-name {
-  font-family: 'Oswald', 'Roboto Condensed', sans-serif;
-  font-size: 15px;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: .5px;
-}
-.tno-banner .tno-tag {
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 12px;
-  font-weight: 400;
-  color: #cdbba7;
-}
-
-/* Parchment look for the card body (keeps your warm base color) */
-.tno-card {
-  background:
-    linear-gradient(#f6f3ee, #f6f3ee),                    /* base */
-    repeating-linear-gradient(0deg, rgba(0,0,0,.035) 0, rgba(0,0,0,.035) 1px, transparent 1px, transparent 3px); /* paper grain */
-  background-blend-mode: multiply;
-}
-
-/* Slightly darker border for the portrait */
-.tno-portrait img { border: 1px solid #6b5a49; }
-
-/* Controls bar that visually attaches to the card */
-#docsControls { margin: 0; padding: 6px 8px; background:#f2f2f2; border:1px solid #bbb; border-bottom:0; border-radius:2px 2px 0 0; }
-
-
-/* Make the first card attach cleanly to the controls strip */
-#docPane .tno-card:first-child { margin-top: 0;}
-
 </style>
 
 </head>
@@ -308,6 +210,7 @@
 <script src="https://unpkg.com/leaflet.pattern/dist/leaflet.pattern.min.js"></script>
 <link rel="stylesheet" href="https://unpkg.com/leaflet.pattern/dist/leaflet.pattern.css">
 <script src="https://www.youtube.com/iframe_api"></script>
+<script src="js/doc_viewer.js"></script>
 <script src="js/map_core.js"></script>
 <script src="js/app.js"></script>
 <script>
