--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Yimana RP Elections</title>
+<title>UsuriousCape's Page</title>
 <link rel="stylesheet" href="https://unpkg.com/xp.css"/>
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 <link rel="stylesheet" href="css/docs_viewer.css">
@@ -220,45 +220,9 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet.pattern@0.9.0/dist/leaflet.pattern.css">
 <script src="https://www.youtube.com/iframe_api"></script>
 <script src="js/doc_viewer.js"></script>
-<script src="js/map_core.js"></script>
+<script src="js/core/core.js"></script>
+<script src="js/domain/domain.js"></script>
+<script src="js/map/map_view.js"></script>
+<script src="js/ui/ui.js"></script>
 <script src="js/app.js"></script>
-<script>
-(function setupTabs(){
-  const btnMap = document.getElementById('tabMap');
-  const btnRes = document.getElementById('tabResults');
-  const btnAbt = document.getElementById('tabAbout');
-  const panelMap = document.getElementById('panelMap');
-  const panelRes = document.getElementById('panelResults');
-  const panelAbt = document.getElementById('panelAbout');
-  if (!btnMap || !btnRes || !btnAbt || !panelMap || !panelRes || !panelAbt) return;
-  function select(tab){
-    const isMap = tab==='map', isRes = tab==='results', isAbt = tab==='about';
-    panelMap.style.display = isMap ? '' : 'none';
-    panelRes.style.display = isRes ? '' : 'none';
-    panelAbt.style.display = isAbt ? '' : 'none';
-    btnMap.setAttribute('aria-selected', String(isMap));
-    btnRes.setAttribute('aria-selected', String(isRes));
-    btnAbt.setAttribute('aria-selected', String(isAbt));
-  }
-  btnMap.addEventListener('click', ()=>select('map'));
-  btnRes.addEventListener('click', ()=>select('results'));
-  btnAbt.addEventListener('click', ()=>select('about'));
-  select('map');
-})();
-</script>
-<script>
-(function exactRowHeight(){
-  const head = document.getElementById('appHeader');
-  const panel = document.getElementById('panelMap');
-  if (!head || !panel) return;
-  function apply(){
-    // header height + top/bottom margins around the app (8px + 8px)
-    const h = head.getBoundingClientRect().height + 16;
-    panel.style.height = `calc(100vh - ${Math.round(h)}px)`;
-  }
-  window.addEventListener('resize', apply);
-  apply();
-})();
-</script>
 </body></html>
-
